@@ -153,7 +153,11 @@ void * __cdecl __attribute__ ((__nothrow__)) mingw_getsp (void);
 #ifndef USE_NO_MINGW_SETJMP_TWO_ARGS
 #  ifndef _INC_SETJMPEX
 #    ifdef _WIN64
+#     if (__MINGW_GCC_VERSION < 40702)
+#      define setjmp(BUF) _setjmp((BUF), mingw_getsp())
+#     else
 #      define setjmp(BUF) _setjmp((BUF), __builtin_frame_address (0))
+#     endif
 #    else
 #      define setjmp(BUF) _setjmp3((BUF), NULL)
 #    endif
@@ -162,8 +166,13 @@ void * __cdecl __attribute__ ((__nothrow__)) mingw_getsp (void);
 #  else
 #    undef setjmp
 #    ifdef _WIN64
+#     if (__MINGW_GCC_VERSION < 40702)
+#      define setjmp(BUF) _setjmpex((BUF), mingw_getsp())
+#      define setjmpex(BUF) _setjmpex((BUF), mingw_getsp())
+#     else
 #      define setjmp(BUF) _setjmpex((BUF), __builtin_frame_address (0))
 #      define setjmpex(BUF) _setjmpex((BUF), __builtin_frame_address (0))
+#     endif
 #    else
 #      define setjmp(BUF) _setjmpex((BUF), NULL)
 #      define setjmpex(BUF) _setjmpex((BUF), NULL)
